split the get and the post, modified the checking of the validity of the increment

--- a/VRTest/Views/NPV/Index.cshtml
+++ b/VRTest/Views/NPV/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VRTest.Models.NPVDetailModel>
+﻿@model IEnumerable<VRTestWeb.Razor.Models.NPVDetailModel>
 
 @{
     ViewData["Title"] = "Index";
