completed the bare look of the npv module

--- a/VRTest/Views/NPV/Index.cshtml
+++ b/VRTest/Views/NPV/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VRTestWeb.Razor.Models.NPVDetailModel>
+﻿@model IEnumerable<VRTest.Common.Models.NPVDetailModel>
 
 @{
     ViewData["Title"] = "Index";
