Finalized the ui and validations for angular web

--- a/vrtest.angular.app/ClientApp/src/app/npv/npv.component.html
+++ b/vrtest.angular.app/ClientApp/src/app/npv/npv.component.html
@@ -27,7 +27,7 @@
     <input class="input-block input-width" type="number" [(ngModel)]="npvModel.initialCost"/>
   </p>
   <p>
-    <button class="btn" (click)="calculateNpvParameters()">Calculate</button>
+    <button class="btn" (click)="calculateNpvParameters()" [disabled]="isNotValid">Calculate</button>
   </p>
 
 <div>
